manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.example.com
    http:
      paths:
      - path: /helloWorld
        pathType: Prefix
        backend:
          service:
            name: nodejs-hello-world-service
            port:
              number: 80
